src/syntax.output
Terminals unused in grammar

   LCOM
   RCOM


State 31 conflicts: 3 shift/reduce
State 36 conflicts: 3 shift/reduce
State 49 conflicts: 11 shift/reduce
State 68 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 77 conflicts: 11 shift/reduce
State 78 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag
   13                | STRUCT error RC
   14                | error OptTag LC DefList RC

   15 OptTag: %empty
   16       | ID

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID LP error RP
   24       | ID error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | LC DefList StmtList
   30       | error RC

   31 StmtList: %empty
   32         | Stmt StmtList

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | IF error ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | WHILE error RP
   41     | WHILE error RC
   42     | error SEMI
   43     | Exp
   44     | RETURN Exp

   45 DefList: %empty
   46        | Def DefList

   47 Def: Specifier DecList SEMI
   48    | Specifier error SEMI
   49    | error DecList SEMI
   50    | Specifier DecList

   51 DecList: Dec
   52        | Dec COMMA DecList

   53 Dec: VarDec
   54    | VarDec ASSIGNOP Exp

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp AND Exp
   57    | Exp OR Exp
   58    | Exp RELOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp STAR Exp
   62    | Exp DIV Exp
   63    | LP Exp RP
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp DOT ID
   70    | ID
   71    | INT
   72    | FLOAT
   73    | Exp ASSIGNOP error SEMI
   74    | Exp AND error SEMI
   75    | Exp OR error SEMI
   76    | Exp RELOP error SEMI
   77    | Exp PLUS error SEMI
   78    | Exp MINUS error SEMI
   79    | Exp STAR error SEMI
   80    | Exp DIV error SEMI
   81    | ID LP error SEMI
   82    | Exp LB error RB

   83 Args: Exp COMMA Args
   84     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 13 14 20 23 24 30 38 40 41 42 48 49 73 74 75 76 77 78 79
    80 81 82
INT (258) 19 71
FLOAT (259) 72
ID (260) 16 17 18 21 22 23 24 66 67 69 70 81
SEMI (261) 4 5 33 35 42 47 48 49 73 74 75 76 77 78 79 80 81
COMMA (262) 8 25 52 83
ASSIGNOP (263) 54 55 73
RELOP (264) 58 76
PLUS (265) 59 77
MINUS (266) 60 64 78
STAR (267) 61 79
DIV (268) 62 80
AND (269) 56 74
OR (270) 57 75
NOT (271) 65
DOT (272) 69
TYPE (273) 9
LP (274) 21 22 23 36 37 39 63 66 67 81
RP (275) 21 22 23 24 36 37 39 40 63 66 67
LB (276) 19 20 68 82
RB (277) 19 20 68 82
LC (278) 11 14 28 29
RC (279) 11 13 14 28 30 41
STRUCT (280) 11 12 13
RETURN (281) 35 44
IF (282) 36 37 38
ELSE (283) 37 38
WHILE (284) 39 40 41
LCOM (285)
RCOM (286)
LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 2
ExtDef (36)
    on left: 4 5 6, on right: 2
ExtDecList (37)
    on left: 7 8, on right: 4 8
Specifier (38)
    on left: 9 10, on right: 4 5 6 27 47 48 50
StructSpecifier (39)
    on left: 11 12 13 14, on right: 10
OptTag (40)
    on left: 15 16, on right: 11 14
Tag (41)
    on left: 17, on right: 12
VarDec (42)
    on left: 18 19 20, on right: 7 8 19 20 27 53 54
FunDec (43)
    on left: 21 22 23 24, on right: 6
VarList (44)
    on left: 25 26, on right: 21 25
ParamDec (45)
    on left: 27, on right: 25 26
CompSt (46)
    on left: 28 29 30, on right: 6 34
StmtList (47)
    on left: 31 32, on right: 28 29 32
Stmt (48)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44, on right: 32 36 37
    38 39
DefList (49)
    on left: 45 46, on right: 11 14 28 29 46
Def (50)
    on left: 47 48 49 50, on right: 46
DecList (51)
    on left: 51 52, on right: 47 49 50 52
Dec (52)
    on left: 53 54, on right: 51 52
Exp (53)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81 82, on right: 33 35 36 37 39 43 44 54
    55 56 57 58 59 60 61 62 63 64 65 68 69 73 74 75 76 77 78 79 80
    82 83 84
Args (54)
    on left: 83 84, on right: 66 83


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   14 StructSpecifier: error . OptTag LC DefList RC

    ID  shift, and go to state 9

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 10


State 2

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 3

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag
   13                | STRUCT . error RC

    error  shift, and go to state 11
    ID     shift, and go to state 12

    LC  reduce using rule 15 (OptTag)

    OptTag  go to state 13
    Tag     go to state 14


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 16
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 17
    SEMI  shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 9

   16 OptTag: ID .

    $default  reduce using rule 16 (OptTag)


State 10

   14 StructSpecifier: error OptTag . LC DefList RC

    LC  shift, and go to state 22


State 11

   13 StructSpecifier: STRUCT error . RC

    RC  shift, and go to state 23


State 12

   16 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 17 (Tag)


State 13

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 24


State 14

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 17

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . LP error RP
   24       | ID . error RP

    error  shift, and go to state 25
    LP     shift, and go to state 26

    SEMI   reduce using rule 18 (VarDec)
    COMMA  reduce using rule 18 (VarDec)
    LB     reduce using rule 18 (VarDec)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 27


State 20

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 28
    LB     shift, and go to state 29

    $default  reduce using rule 7 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 30
    LC     shift, and go to state 31

    CompSt  go to state 32


State 22

   14 StructSpecifier: error OptTag LC . DefList RC

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 45 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 36


State 23

   13 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 13 (StructSpecifier)


State 24

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 45 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 37
    Def              go to state 36


State 25

   24 FunDec: ID error . RP

    RP  shift, and go to state 38


State 26

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP
   23       | ID LP . error RP

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    RP      shift, and go to state 40
    STRUCT  shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 42
    ParamDec         go to state 43


State 27

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 28

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 44

    ExtDecList  go to state 45
    VarDec      go to state 20


State 29

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 46
    INT    shift, and go to state 47


State 30

   30 CompSt: error . RC

    RC  shift, and go to state 48


State 31

   28 CompSt: LC . DefList StmtList RC
   29       | LC . DefList StmtList

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end    reduce using rule 45 (DefList)
    error   [reduce using rule 45 (DefList)]
    INT     reduce using rule 45 (DefList)
    FLOAT   reduce using rule 45 (DefList)
    ID      reduce using rule 45 (DefList)
    MINUS   reduce using rule 45 (DefList)
    NOT     reduce using rule 45 (DefList)
    TYPE    [reduce using rule 45 (DefList)]
    LP      reduce using rule 45 (DefList)
    LC      reduce using rule 45 (DefList)
    RC      reduce using rule 45 (DefList)
    STRUCT  [reduce using rule 45 (DefList)]
    RETURN  reduce using rule 45 (DefList)
    IF      reduce using rule 45 (DefList)
    ELSE    reduce using rule 45 (DefList)
    WHILE   reduce using rule 45 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 36


State 32

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 33

   14 StructSpecifier: error . OptTag LC DefList RC
   49 Def: error . DecList SEMI

    ID  shift, and go to state 50

    $default  reduce using rule 15 (OptTag)

    OptTag   go to state 10
    VarDec   go to state 51
    DecList  go to state 52
    Dec      go to state 53


State 34

   47 Def: Specifier . DecList SEMI
   48    | Specifier . error SEMI
   50    | Specifier . DecList

    error  shift, and go to state 54
    ID     shift, and go to state 44

    VarDec   go to state 51
    DecList  go to state 55
    Dec      go to state 53


State 35

   14 StructSpecifier: error OptTag LC DefList . RC

    RC  shift, and go to state 56


State 36

   46 DefList: Def . DefList

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end    reduce using rule 45 (DefList)
    error   [reduce using rule 45 (DefList)]
    INT     reduce using rule 45 (DefList)
    FLOAT   reduce using rule 45 (DefList)
    ID      reduce using rule 45 (DefList)
    MINUS   reduce using rule 45 (DefList)
    NOT     reduce using rule 45 (DefList)
    TYPE    [reduce using rule 45 (DefList)]
    LP      reduce using rule 45 (DefList)
    LC      reduce using rule 45 (DefList)
    RC      reduce using rule 45 (DefList)
    STRUCT  [reduce using rule 45 (DefList)]
    RETURN  reduce using rule 45 (DefList)
    IF      reduce using rule 45 (DefList)
    ELSE    reduce using rule 45 (DefList)
    WHILE   reduce using rule 45 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 57
    Def              go to state 36


State 37

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 58


State 38

   24 FunDec: ID error RP .

    $default  reduce using rule 24 (FunDec)


State 39

   14 StructSpecifier: error . OptTag LC DefList RC
   23 FunDec: ID LP error . RP

    ID  shift, and go to state 9
    RP  shift, and go to state 59

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 10


State 40

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 41

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 44

    VarDec  go to state 60


State 42

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 61


State 43

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 62

    $default  reduce using rule 26 (VarList)


State 44

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 45

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 46

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 63


State 47

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 64


State 48

   30 CompSt: error RC .

    $default  reduce using rule 30 (CompSt)


State 49

   28 CompSt: LC DefList . StmtList RC
   29       | LC DefList . StmtList

    error   shift, and go to state 65
    INT     shift, and go to state 66
    FLOAT   shift, and go to state 67
    ID      shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71
    LC      shift, and go to state 31
    RETURN  shift, and go to state 72
    IF      shift, and go to state 73
    WHILE   shift, and go to state 74

    $end    reduce using rule 31 (StmtList)
    error   [reduce using rule 31 (StmtList)]
    INT     [reduce using rule 31 (StmtList)]
    FLOAT   [reduce using rule 31 (StmtList)]
    ID      [reduce using rule 31 (StmtList)]
    MINUS   [reduce using rule 31 (StmtList)]
    NOT     [reduce using rule 31 (StmtList)]
    TYPE    reduce using rule 31 (StmtList)
    LP      [reduce using rule 31 (StmtList)]
    LC      [reduce using rule 31 (StmtList)]
    RC      reduce using rule 31 (StmtList)
    STRUCT  reduce using rule 31 (StmtList)
    RETURN  [reduce using rule 31 (StmtList)]
    IF      [reduce using rule 31 (StmtList)]
    ELSE    reduce using rule 31 (StmtList)
    WHILE   [reduce using rule 31 (StmtList)]

    CompSt    go to state 75
    StmtList  go to state 76
    Stmt      go to state 77
    Exp       go to state 78


State 50

   16 OptTag: ID .
   18 VarDec: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (VarDec)


State 51

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   53 Dec: VarDec .
   54    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 79
    LB        shift, and go to state 29

    $default  reduce using rule 53 (Dec)


State 52

   49 Def: error DecList . SEMI

    SEMI  shift, and go to state 80


State 53

   51 DecList: Dec .
   52        | Dec . COMMA DecList

    COMMA  shift, and go to state 81

    $default  reduce using rule 51 (DecList)


State 54

   48 Def: Specifier error . SEMI

    SEMI  shift, and go to state 82


State 55

   47 Def: Specifier DecList . SEMI
   50    | Specifier DecList .

    SEMI  shift, and go to state 83

    $default  reduce using rule 50 (Def)


State 56

   14 StructSpecifier: error OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 57

   46 DefList: Def DefList .

    $default  reduce using rule 46 (DefList)


State 58

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 59

   23 FunDec: ID LP error RP .

    $default  reduce using rule 23 (FunDec)


State 60

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 29

    $default  reduce using rule 27 (ParamDec)


State 61

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 62

   25 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 84
    ParamDec         go to state 43


State 63

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 64

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 65

   30 CompSt: error . RC
   42 Stmt: error . SEMI

    SEMI  shift, and go to state 85
    RC    shift, and go to state 48


State 66

   71 Exp: INT .

    $default  reduce using rule 71 (Exp)


State 67

   72 Exp: FLOAT .

    $default  reduce using rule 72 (Exp)


State 68

   66 Exp: ID . LP Args RP
   67    | ID . LP RP
   70    | ID .
   81    | ID . LP error SEMI

    LP  shift, and go to state 86

    LP        [reduce using rule 70 (Exp)]
    $default  reduce using rule 70 (Exp)


State 69

   64 Exp: MINUS . Exp

    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 87


State 70

   65 Exp: NOT . Exp

    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 88


State 71

   63 Exp: LP . Exp RP

    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 89


State 72

   35 Stmt: RETURN . Exp SEMI
   44     | RETURN . Exp

    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 90


State 73

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt
   38     | IF . error ELSE Stmt

    error  shift, and go to state 91
    LP     shift, and go to state 92


State 74

   39 Stmt: WHILE . LP Exp RP Stmt
   40     | WHILE . error RP
   41     | WHILE . error RC

    error  shift, and go to state 93
    LP     shift, and go to state 94


State 75

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 76

   28 CompSt: LC DefList StmtList . RC
   29       | LC DefList StmtList .

    RC  shift, and go to state 95

    RC        [reduce using rule 29 (CompSt)]
    $default  reduce using rule 29 (CompSt)


State 77

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 65
    INT     shift, and go to state 66
    FLOAT   shift, and go to state 67
    ID      shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71
    LC      shift, and go to state 31
    RETURN  shift, and go to state 72
    IF      shift, and go to state 73
    WHILE   shift, and go to state 74

    $end    reduce using rule 31 (StmtList)
    error   [reduce using rule 31 (StmtList)]
    INT     [reduce using rule 31 (StmtList)]
    FLOAT   [reduce using rule 31 (StmtList)]
    ID      [reduce using rule 31 (StmtList)]
    MINUS   [reduce using rule 31 (StmtList)]
    NOT     [reduce using rule 31 (StmtList)]
    TYPE    reduce using rule 31 (StmtList)
    LP      [reduce using rule 31 (StmtList)]
    LC      [reduce using rule 31 (StmtList)]
    RC      reduce using rule 31 (StmtList)
    STRUCT  reduce using rule 31 (StmtList)
    RETURN  [reduce using rule 31 (StmtList)]
    IF      [reduce using rule 31 (StmtList)]
    ELSE    reduce using rule 31 (StmtList)
    WHILE   [reduce using rule 31 (StmtList)]

    CompSt    go to state 75
    StmtList  go to state 96
    Stmt      go to state 77
    Exp       go to state 78


State 78

   33 Stmt: Exp . SEMI
   43     | Exp .
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . ASSIGNOP error SEMI
   74    | Exp . AND error SEMI
   75    | Exp . OR error SEMI
   76    | Exp . RELOP error SEMI
   77    | Exp . PLUS error SEMI
   78    | Exp . MINUS error SEMI
   79    | Exp . STAR error SEMI
   80    | Exp . DIV error SEMI
   82    | Exp . LB error RB

    SEMI      shift, and go to state 97
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    LB        shift, and go to state 107

    MINUS     [reduce using rule 43 (Stmt)]
    $default  reduce using rule 43 (Stmt)


State 79

   54 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 108


State 80

   49 Def: error DecList SEMI .

    $default  reduce using rule 49 (Def)


State 81

   52 DecList: Dec COMMA . DecList

    ID  shift, and go to state 44

    VarDec   go to state 51
    DecList  go to state 109
    Dec      go to state 53


State 82

   48 Def: Specifier error SEMI .

    $default  reduce using rule 48 (Def)


State 83

   47 Def: Specifier DecList SEMI .

    $default  reduce using rule 47 (Def)


State 84

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 85

   42 Stmt: error SEMI .

    $default  reduce using rule 42 (Stmt)


State 86

   66 Exp: ID LP . Args RP
   67    | ID LP . RP
   81    | ID LP . error SEMI

    error  shift, and go to state 110
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71
    RP     shift, and go to state 111

    Exp   go to state 112
    Args  go to state 113


State 87

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   64    | MINUS Exp .
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . ASSIGNOP error SEMI
   74    | Exp . AND error SEMI
   75    | Exp . OR error SEMI
   76    | Exp . RELOP error SEMI
   77    | Exp . PLUS error SEMI
   78    | Exp . MINUS error SEMI
   79    | Exp . STAR error SEMI
   80    | Exp . DIV error SEMI
   82    | Exp . LB error RB

    STAR  shift, and go to state 102
    DIV   shift, and go to state 103
    DOT   shift, and go to state 106
    LB    shift, and go to state 107

    $default  reduce using rule 64 (Exp)


State 88

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   65    | NOT Exp .
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . ASSIGNOP error SEMI
   74    | Exp . AND error SEMI
   75    | Exp . OR error SEMI
   76    | Exp . RELOP error SEMI
   77    | Exp . PLUS error SEMI
   78    | Exp . MINUS error SEMI
   79    | Exp . STAR error SEMI
   80    | Exp . DIV error SEMI
   82    | Exp . LB error RB

    DOT  shift, and go to state 106
    LB   shift, and go to state 107

    $default  reduce using rule 65 (Exp)


State 89

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   63    | LP Exp . RP
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . ASSIGNOP error SEMI
   74    | Exp . AND error SEMI
   75    | Exp . OR error SEMI
   76    | Exp . RELOP error SEMI
   77    | Exp . PLUS error SEMI
   78    | Exp . MINUS error SEMI
   79    | Exp . STAR error SEMI
   80    | Exp . DIV error SEMI
   82    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    RP        shift, and go to state 114
    LB        shift, and go to state 107


State 90

   35 Stmt: RETURN Exp . SEMI
   44     | RETURN Exp .
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . ASSIGNOP error SEMI
   74    | Exp . AND error SEMI
   75    | Exp . OR error SEMI
   76    | Exp . RELOP error SEMI
   77    | Exp . PLUS error SEMI
   78    | Exp . MINUS error SEMI
   79    | Exp . STAR error SEMI
   80    | Exp . DIV error SEMI
   82    | Exp . LB error RB

    SEMI      shift, and go to state 115
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    PLUS      shift, and go to state 100
    MINUS     shift, and go to state 101
    STAR      shift, and go to state 102
    DIV       shift, and go to state 103
    AND       shift, and go to state 104
    OR        shift, and go to state 105
    DOT       shift, and go to state 106
    LB        shift, and go to state 107

    MINUS     [reduce using rule 44 (Stmt)]
    $default  reduce using rule 44 (Stmt)


State 91

   38 Stmt: IF error . ELSE Stmt

    ELSE  shift, and go to state 116


State 92

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 117


State 93

   40 Stmt: WHILE error . RP
   41     | WHILE error . RC

    RP  shift, and go to state 118
    RC  shift, and go to state 119


State 94

   39 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 120


State 95

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 96

   32 StmtList: Stmt StmtList .

    $default  reduce using rule 32 (StmtList)


State 97

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 98

   55 Exp: Exp ASSIGNOP . Exp
   73    | Exp ASSIGNOP . error SEMI

    error  shift, and go to state 121
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 122


State 99

   58 Exp: Exp RELOP . Exp
   76    | Exp RELOP . error SEMI

    error  shift, and go to state 123
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 124


State 100

   59 Exp: Exp PLUS . Exp
   77    | Exp PLUS . error SEMI

    error  shift, and go to state 125
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 126


State 101

   60 Exp: Exp MINUS . Exp
   78    | Exp MINUS . error SEMI

    error  shift, and go to state 127
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 128


State 102

   61 Exp: Exp STAR . Exp
   79    | Exp STAR . error SEMI

    error  shift, and go to state 129
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 130


State 103

   62 Exp: Exp DIV . Exp
   80    | Exp DIV . error SEMI

    error  shift, and go to state 131
    INT    shift, and go to state 66
    FLOAT  shift, and go to state 67
    ID     shift, and go to state 68
    MINUS  shift, and go to state 69
    NOT    shift, and go to state 70
    LP     shift, and go to state 71

    Exp  go to state 132


State 104

   56 Exp: Exp AND . Exp
   74    | Exp AND . error SEMI
